src/main/java/com/example/auth/global/error/exception/ErrorCode.java
package com.example.auth.global.error.exception;

public enum ErrorCode {
}
